Fix textarea placeholder not showing

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -91,7 +91,7 @@ form {
 
 #feedback {
     width: 100%;
-    height: 5rem;
+    padding: 0.5rem;
     border-radius: 0.25rem;
     resize: vertical;
 }
